ProjectFortress/parser_tests/XXXag.test
#    Copyright 2009, Oracle and/or its affiliates.
#    All rights reserved.
#
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
#

tests=XXXPreparser.ag
PREPARSER_TESTS_DIR=${FORTRESS_AUTOHOME}/ProjectFortress/parser_tests
compile
compile_err_equals=\
${PREPARSER_TESTS_DIR}/XXXPreparser.ag.fss:15:19:\n\
\ Syntax Error\n\
File XXXPreparser.ag.fss has 1 error.\n
compile_out_equals=
